# repoagentbench

./: .gitignore  LICENSE  README.md  aider-model-settings.yml  pyproject.toml
.github/workflows/: test.yml
examples/demo/: goal.md  solution.patch
examples/demo/tests/: test_calculator.py
scripts/: make_leaderboard_chart.py  make_social_preview.py
src/repoagentbench/: cli.py  events.py  pr_mining.py  runner.py  runs.py  verify.py
src/repoagentbench/agents/: __init__.py  aider.py  base.py  claude_code.py  mock_fix.py
tests/: test_events.py  test_pr_mining.py  test_runner_e2e.py  test_runs.py
