[project]
name = "repoagentbench"
version = "0.0.7"
description = "Turn your merged PRs into reproducible coding-agent benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "humphrey" }]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
repoagentbench = "repoagentbench.cli:main"
rab = "repoagentbench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repoagentbench"]
